; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_probe-event.c_kprobe_convert_to_perf_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_probe-event.c_kprobe_convert_to_perf_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.probe_trace_point = type { i32 }
%struct.perf_probe_point = type { i32 }
%struct.symbol = type { i32 }

@.str = private unnamed_addr constant [37 x i8] c"Failed to find symbol %s in kernel.\0A\00", align 1
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.probe_trace_point*, %struct.perf_probe_point*)* @kprobe_convert_to_perf_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kprobe_convert_to_perf_probe(%struct.probe_trace_point* %0, %struct.perf_probe_point* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.probe_trace_point*, align 8
  %5 = alloca %struct.perf_probe_point*, align 8
  %6 = alloca %struct.symbol*, align 8
  store %struct.probe_trace_point* %0, %struct.probe_trace_point** %4, align 8
  store %struct.perf_probe_point* %1, %struct.perf_probe_point** %5, align 8
  %7 = load %struct.probe_trace_point*, %struct.probe_trace_point** %4, align 8
  %8 = getelementptr inbounds %struct.probe_trace_point, %struct.probe_trace_point* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.symbol* @__find_kernel_function_by_name(i32 %9, i32* null)
  store %struct.symbol* %10, %struct.symbol** %6, align 8
  %11 = load %struct.symbol*, %struct.symbol** %6, align 8
  %12 = icmp ne %struct.symbol* %11, null
  br i1 %12, label %20, label %13

13:                                               ; preds = %2
  %14 = load %struct.probe_trace_point*, %struct.probe_trace_point** %4, align 8
  %15 = getelementptr inbounds %struct.probe_trace_point, %struct.probe_trace_point* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @pr_err(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* @ENOENT, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %3, align 4
  br label %24

20:                                               ; preds = %2
  %21 = load %struct.probe_trace_point*, %struct.probe_trace_point** %4, align 8
  %22 = load %struct.perf_probe_point*, %struct.perf_probe_point** %5, align 8
  %23 = call i32 @convert_to_perf_probe_point(%struct.probe_trace_point* %21, %struct.perf_probe_point* %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %13
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local %struct.symbol* @__find_kernel_function_by_name(i32, i32*) #1

declare dso_local i32 @pr_err(i8*, i32) #1

declare dso_local i32 @convert_to_perf_probe_point(%struct.probe_trace_point*, %struct.perf_probe_point*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
